[package]
name = "loraxe"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/ajmwagar/lor-axe"
description = "a multi-threaded, low-bandwidth layer-7 Slow HTTP DOS tool"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.6.5"
rayon = "1.0"
pretty_env_logger = "0.3.0"
log = "0.4.6"
structopt = "0.2"

[[bin]]
path = "./src/main.rs"
name = "loraxe"
